--- a/planet.css
+++ b/planet.css
@@ -1,21 +1,98 @@
-body{
-    margin: 0;
-    padding: 0;
-    /* height: 100vh;
-    width: 100vw; */
+body {
+    background-image: url(./Images/Uzay.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
 }
-/* header{
-    height: 20vh;
-    background-color: aquamarine;
-    display: flex;
-    justify-content: center;
-} */
-section{
-    height: 100vh;
-    width: 100vw;
-    background-color: beige;
+
+h1 {
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    opacity: 0.7;
 }
-img{
-    width: 100%;
-    height: 100%;
+@media (min-width: 950px){
+    .Planets {
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        align-content: center;
+    }
+    
+    img {
+        opacity: 0.8;
+        width: 150px;
+    }
+    a{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
+        color: white;
+    }
+    .Planets>div{
+        transition: padding 2s;
+    }
+    .Planets>div:hover{
+        padding: 10px;
+        box-shadow: 0px 0px 20px 0px white;
+        border-radius: 20px;
+    }
+   
+}
+@media (min-width: 600px) and (max-width: 949px) {
+    .Planets {
+        display: grid;
+        grid-template-columns: auto auto auto ;
+        align-content: center;
+    }
+    
+    img {
+        width: 150px;
+    }
+    a{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
+        color: white;
+    }
+    .Planets>div{
+        transition: padding 2s;
+    }
+    .Planets>div:hover{
+        padding: 10px;
+        box-shadow: 0px 0px 20px 0px white;
+        border-radius: 20px;
+    }
+}
+@media (max-width:599px){
+    .Planets {
+        display: grid;
+        grid-template-columns: auto;
+        justify-content: center;
+        align-content: center;
+    }
+    
+    img {
+        /* box-shadow: 0px 0px 0px 0px; */
+        width: 150px;
+    }
+    a{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
+        color: white;
+    }
+    .Planets>div{
+        transition: padding 2s;
+    }
+    .Planets>div:hover{
+        padding: 10px;
+        box-shadow: 0px 0px 20px 0px white;
+        border-radius: 20px;
+    }
 }
