--- a/PlanetsCss/Venus.css
+++ b/PlanetsCss/Venus.css
@@ -1,27 +1,97 @@
-body{
+body {
     background-color: black;
     color: white;
-    height: 100%;;
+    height: 100%;
+    ;
 }
-.Venus{
-    display: flex;
-    flex-direction: column;
-    font-size: 20px;
-}
-section{
-    display: flex;
-    align-items: center;
-}
-h1{
-    text-align: center;
 
-}
-p{
-    text-align: center;
-    text-shadow: 0 0 5px #FF0000, 0 0 10px #0000FF;
+@media (min-width: 950px) {
+    .Venus {
+        display: flex;
+        flex-direction: column;
+        font-size: 20px;
+    }
 
+    section {
+        display: flex;
+        align-items: center;
+    }
+
+    h1 {
+        text-align: center;
+
+    }
+
+    p {
+        text-align: center;
+        text-shadow: 0 0 5px #FF0000, 0 0 10px #0000FF;
+
+    }
+
+    .indicators {
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        justify-content: space-around;
+    }
 }
-.indicators{
-    display: flex;
-    justify-content: space-around;
+
+@media (min-width: 600px) and (max-width: 949px) {
+    .Venus {
+        display: flex;
+        flex-direction: column;
+        font-size: 20px;
+    }
+
+    section {
+        display: flex;
+        align-items: center;
+    }
+
+    h1 {
+        text-align: center;
+
+    }
+
+    p {
+        text-align: center;
+        text-shadow: 0 0 5px #FF0000, 0 0 10px #0000FF;
+
+    }
+
+    .indicators {
+        display: grid;
+        grid-template-columns: auto auto  ;
+        justify-content: space-around;
+    }
+}
+
+
+@media (max-width: 599px) {
+    section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    h1 {
+        text-align: center;
+
+    }
+
+    p {
+        text-align: center;
+        text-shadow: 0 0 5px #FF0000, 0 0 10px #0000FF;
+
+    }
+
+    img {
+        width: 300px;
+    }
+
+    .indicators {
+        display: grid;
+        grid-template-columns: auto auto;
+        align-items: center;
+        font-size: 20px;
+    }
 }
